# dynstack

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  best.txt  docker-compose.yml  parameters.txt  parameters_cgp.txt  run.sh  run_solver_hs_cpp.sh  start-services.sh
Helpers/: Parser.py
helpers/: Parser.py
simulation/: runner.h  sim.cpp  simulator.cpp  simulator.h
starterkits/cpp/: CMakeLists.txt  log.txt  run.sh
starterkits/cpp/src/: SimulatorEvalOp.cpp  SimulatorEvalOp.h  bla.txt  heuristic.cpp  heuristic.h  main.cpp  parameters.txt  run_simulation.cpp  run_simulation.h
starterkits/cpp/src/cranescheduling/: cranescheduling_model.pb.cc  cranescheduling_model.pb.h
starterkits/cpp/src/hotstorage/: custom_heuristic_dj.cc  get_all_possible_moves.cc  get_all_possible_moves.h  heuristic.cc  hotstorage_model.pb.cc  hotstorage_model.pb.h
starterkits/cpp/src/rollingmill/: rollingmill_model.pb.cc  rollingmill_model.pb.h
trainer/simulator/: Runner.h  Simulator.cpp  Simulator.h
trainer/src/: CustomHeuristic.cpp  Heuristic.cpp  Heuristic.h  Model.cpp  Model.h  Parameters.h  PriorityHeuristic.cpp  SeedSimulator.h  SimulatorEvalCGPOp.cpp  SimulatorEvalCGPOp.h  SimulatorEvalOp.cpp  SimulatorEvalOp.h  WriteBest.h  main.cpp  test.cpp
viewer/: Program.cs  index.html  requirements.txt
viewer/data/: best.txt  parameters.txt
viewer/gp_runner/: CMakeLists.txt  Dockerfile
viewer/gp_runner/src/: Model.cpp  Model.h  SimulatorEvalOp.cpp  SimulatorEvalOp.h  stacking.cc
viewer/gp_runner/src/hotstorage/: genetic.cc  heuristic.cc  heuristic.h  stacking.h
viewer/sim_runner/: Dockerfile  start-services.sh
viewer/sim_runner/simulation/DynStack.Simulation/HS/: HotstorageSimulation.cs
viewer/sim_runner/simulation/DynStack.SimulationRunner/: Program.cs
viewer/sim_runner/simulation/DynStack.SimulationRunner/HS/: SimulationHost.cs
viewer/sim_runner/viewer/: Program.cs  index.html
viewer/sim_runner/viewer/hs/: HotstorageModel.cs
